syntax = "proto3";

package auth;

service Auth {
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenReply) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string accessToken = 1;
  string refreshToken = 2;
}

message GenerateTokenRequest {
}

message GenerateTokenReply {
  string accessToken = 1;
  string refreshToken = 2;
}